@@ -1,6 +1,14 @@
+2002-05-12  Jeffrey Stedfast  <fejj@ximian.com>
+
+	* gmime-stream-file.c (stream_length): The length of the stream is
+	bound_end - bound_start.
+
+	* gmime-stream-fs.c (stream_length): The length of the stream is
+	bound_end - bound_start.
+
 2002-05-02  Jeffrey Stedfast  <fejj@ximian.com>
 
-	* gmime-charset.c (main): Gnerate the multibyte charsets without
+	* gmime-charset.c (main): Generate the multibyte charsets without
 	the need for using external .dat files. Also attempt to condense
 	the charset-map table a bit.
 
@@ -1159,11 +1167,11 @@
 
 	* gmime-parser.c (find_header_part_end): new utility function to
 	find the dividing line between body & header.  * gmime-parser.c
-	(g_mime_parser_construct_part): sync.  * gmime-parser.c
+	(g_mime_parser_construct_part): sync.
 	(g_mime_parser_construct_message): sync.
 
-	* gmime-parser.c (get_header_block): remove unused func.  *
-	gmime-parser.c (rfc822_headers): remove unused static array.
+	* gmime-parser.c (get_header_block): remove unused func.
+	(rfc822_headers): remove unused static array.
 
 2001-07-02  Jeffrey Stedfast  <fejj@ximian.com>
 
